[package]
name = "asset-files"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-multipart = "0.7"
actix-web = "4"
actix-web-httpauth = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = "0.3"